@@ -4,9 +4,6 @@ SET(TARGET NRPEServer)
 	
 PROJECT(${TARGET})
 
-# Workaround for bug 0003353 in cmake (aparently not fixed)
-SET_SOURCE_FILES_PROPERTIES(${PB_PLUGIN} PROPERTIES GENERATED TRUE)
-
 SET(SRCS
 	stdafx.cpp
 	"${TARGET}.cpp"
@@ -19,6 +16,7 @@ SET(SRCS
 
 ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
 IF(OPENSSL_FOUND)
+	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
 	ADD_DEFINITIONS(-DUSE_SSL)
 	SET(EXTRA_LIBS ${EXTRA_LIBS} ${OPENSSL_LIBRARIES})
 ENDIF(OPENSSL_FOUND)
@@ -43,7 +41,6 @@ IF(WIN32)
 ENDIF(WIN32)
 
 add_library(${TARGET} MODULE ${SRCS})
-INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
 
 target_link_libraries(${TARGET}
 	${Boost_FILESYSTEM_LIBRARY}
