@@ -14,11 +14,12 @@ SET(SRCS
 	${NSCP_DEF_PLUGIN_CPP}
 )
 
-#IF(OPENSSL_FOUND)
-#	ADD_DEFINITIONS(-DUSE_SSL)
-#ENDIF(OPENSSL_FOUND)
-
 ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
+IF(OPENSSL_FOUND)
+	INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
+	ADD_DEFINITIONS(-DUSE_SSL)
+	SET(EXTRA_LIBS ${EXTRA_LIBS} ${OPENSSL_LIBRARIES})
+ENDIF(OPENSSL_FOUND)
 
 IF(WIN32)
 	SET(SRCS ${SRCS}
@@ -40,15 +41,13 @@ IF(WIN32)
 	)
 ENDIF(WIN32)
 
-
 add_library(${TARGET} MODULE ${SRCS})
 
 target_link_libraries(${TARGET}
 	${Boost_FILESYSTEM_LIBRARY}
 	${Boost_THREAD_LIBRARY}
-	${Boost_THREAD_LIBRARY}
 	${NSCP_DEF_PLUGIN_LIB}
-#	${OPENSSL_LIBRARIES}
+	${EXTRA_LIBS}
 	cryptopp
 )
 INCLUDE(${BUILD_CMAKE_FOLDER}/module.cmake)
