@@ -1,3 +1,3 @@
 version=0.4.1
-build=54
-date=2012-09-07
+build=57
+date=2012-09-10
